synaptic (0.57.11.1ubuntu13) feisty; urgency=low

  * when generating the wget script, use wget -c (LP#76462)
  * po/cs.po:
    - updated (thanks to Vit Pelcak)
  * gtk/rgpkgdetails.cc:
    - fix chinese descriptions display, thanks to Liu Qishuai 
      (LP#102228)
  * fix drop down boxes in preferences (LP#100072)
  * fix terminal window (LP#99877)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue,  3 Apr 2007 22:23:48 +0200

synaptic (0.57.11.1ubuntu12) feisty; urgency=low

  * data/synaptic.desktop.in:
    - fix in the Category to make it show up in g-a-i (LP#88877)
  * common/rpackageview.cc:
    - fix in the getSections() code (LP##91888)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 13 Mar 2007 20:18:09 +0100

synaptic (0.57.11.1ubuntu11) feisty; urgency=low

  * build with gcc 4.3 (closes: #413419)
  * do not return a NULL pointer in name() 
  * remove unneeded pkgActionGroup that seems to cause havoc

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue,  6 Mar 2007 19:02:44 +0100

synaptic (0.57.11.1ubuntu10) feisty; urgency=low

  * debian/control:
    - changed ubuntu maintainer 
    - added XS-Vcs-Bzr
  * gtk/rgpreferenceswindow.cc:
    - fix proxy authentication (thanks to Jan de Mooij) 
      (LP#86769)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 27 Feb 2007 12:34:12 +0100

synaptic (0.57.11.1ubuntu9) feisty; urgency=low

  * remove file descriptor resource leak 
  * depend on latest apt (needs rebuild to fix resource leak)
  * fix crash in "Add downloaded packages" (LP#85934)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 26 Feb 2007 14:31:31 +0100

synaptic (0.57.11.1ubuntu8) feisty; urgency=low

  * move the desktop file back into new control center as it confused
    too many people and we want to get rid of Applications/System Tools
    (LP: #84984)
  * fixed memory corruption problem on reopening the cache
    (LP#81624)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 19 Feb 2007 10:33:32 +0100
