@@ -2048,7 +2048,10 @@ void RGMainWindow::cbAddCDROM(GtkWidget *self, void *data)
    scan.hide();
    if (updateCache) {
       me->setTreeLocked(TRUE);
-      me->_lister->openCache();
+      if (!me->_lister->openCache()) {
+         me->showErrors();
+         exit(1);
+      }
       me->setTreeLocked(FALSE);
       me->refreshTable(me->selectedPackage());
    }
@@ -2482,7 +2485,10 @@ void RGMainWindow::cbClearAllChangesClicked(GtkWidget *self, void *data)
    me->setTreeLocked(TRUE);
 
    // reset
-   me->_lister->openCache();
+   if (!me->_lister->openCache()) {
+      me->showErrors();
+      exit(1);
+   }
 
    me->setTreeLocked(FALSE);
    me->_lister->registerObserver(me);
@@ -2835,9 +2841,10 @@ void RGMainWindow::cbUpdateClicked(GtkWidget *self, void *data)
    // show errors and warnings (like the gpg failures for the package list)
    me->showErrors();
 
-   if(me->_lister->openCache())
+   if(!me->_lister->openCache()) {
       me->showErrors();
-
+      exit(1);
+   }
    // reread saved selections
    ifstream in(file);
    if (!in != 0) {
@@ -3005,7 +3012,10 @@ void RGMainWindow::cbMenuPinClicked(GtkWidget *self, void *data)
       li = g_list_next(li);
    }
    me->setTreeLocked(TRUE);
-   me->_lister->openCache();
+   if (!me->_lister->openCache()) {
+      me->showErrors();
+      exit(1);
+   }
 
    // reread saved selections
    ifstream in(file);
