@@ -8,6 +8,7 @@ synaptic (0.57.11.1ubuntu13) feisty; urgency=low
       (LP#102228)
   * fix drop down boxes in preferences (LP#100072)
   * fix terminal window (LP#99877)
+  * show error and exit if opening the cache fails (LP#99273)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue,  3 Apr 2007 22:23:48 +0200
 
